# quallaa-vault-designer

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/projects/-Users-jefftoffoli-Documents-GitHub-quallaa/memory/: MEMORY.md
docs/: iterative-roadmap.md  reading-list.md  research-brief.md  tna-reference.md
notebooks/: 01-getting-started.ipynb  04-brick-discretization.ipynb
src/vault_designer/: __init__.py  boundaries.py  cost.py  sequence.py  visualize.py  voxelize.py
