[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-designer"
version = "0.1.0"
description = "Interactive tool for designing compression-only masonry structures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jeff Toffoli" },
]

dependencies = [
    "compas>=2.0",
    "compas_fd>=0.5",
    "compas_tna>=0.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "pyvista>=0.43",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["src"]
